--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "webpack-dev-server --content-base dist"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
     "webpack": "~> 2.2.1",
     "webpack-dev-server": "~> 2.2.1"
   }
