--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
+    "eslint": "^3.17.1",
+    "eslint-config-recommended": "^1.5.0",
+    "eslint-loader": "^1.6.3",
     "webpack": "~> 2.2.1",
     "webpack-dev-server": "~> 2.2.1"
   }
