--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-webpack": "^2.0.2",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.2.1",
     "webpack": "~> 2.2.1",
     "webpack-dev-server": "~> 2.2.1"
   }
