--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "test": "NODE_ENV=test karma start karma.config.js"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "eslint": "^3.17.1",
     "eslint-config-recommended": "^1.5.0",
     "eslint-loader": "^1.6.3",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
+    "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
-    "karma-webpack": "^2.0.2",
-    "webpack": "~> 2.2.1",
-    "webpack-dev-server": "~> 2.2.1"
+    "karma-webpack": "^2.0.4",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
